# generics

./: Basil.hs  Collect.hs  CoreData.hs  CoreData2.hs  Database.hs  Example.hs  Happstack.hs  ModelName.hs  Records.hs  Relations.hs  Test2.hs  generic-records.cabal
Basil/: Cache.hs  Core.hs  Interface.hs  Sqlite.hs  TContainerList.hs
Database/: Columns.hs  Parse.hs  Values.hs
Example/: Model.hs  Views.hs
Generics/: Records.hs
Generics/Records/: Collect.hs  Database.hs  Forms.hs  ModelName.hs  Relations.hs  Views.hs
Generics/Records/Database/: Columns.hs  Parse.hs  Values.hs
Generics/Records/Relations/: BelongsTo.hs
Generics/Regular/: Database.hs  Extras.hs  Formlets.hs  Happstack.hs  ModelName.hs  Relations.hs  Views.hs  WebTypes.hs
Generics/Regular/Database/: Columns.hs  Parse.hs  Values.hs
Generics/Regular/Relations/: BelongsTo.hs  HasMany.hs
Relations/: BelongsTo.hs
coredata/: Core.hs  Sqlite.hs  TRef.hs
