Name:            generic-records
Version:         0.1
Synopsis:        Generic Records for model-driven development
Description:     TODO
Category:        Generics, Web, Database
License:         BSD3
License-file:    LICENSE
Copyright:       (c) Chris Eidhof
Author:          Chris Eidhof
Maintainer:      Chris Eidhof <ce+hackage@tupil.com>
Exposed-Modules:   Generics.Records
                 , Generics.Records.Database
                   Generics.Records.Database.Parse
                 , Generics.Records.Database.Columns
                 , Generics.Records.Database.Values
                 , Generics.Records.Forms
                 , Generics.Records.ModelName
                 , Generics.Records.Relations
                 , Generics.Records.Relations.BelongsTo
                 , Generics.Records.Views
Build-Type:      Simple
Build-Depends:   base >= 4, 
                 mtl,
                 HDBC,
                 HDBC-sqlite3,
                 xhtml,
                 formlets >= 0.7,
                 applicative-extras
