Name:            generic-records
Version:         0.2
Synopsis:        Generic Records for model-driven development
Description:     TODO
Category:        Generics, Web, Database
License:         BSD3
License-file:    LICENSE
Copyright:       (c) Chris Eidhof
Author:          Chris Eidhof
Maintainer:      Chris Eidhof <ce+hackage@tupil.com>
Exposed-Modules:   Generics.Regular.Database
                   Generics.Regular.Database.Parse
                 , Generics.Regular.Database.Columns
                 , Generics.Regular.Database.Values
                 , Generics.Regular.Formlets
                 , Generics.Regular.ModelName
                 , Generics.Regular.Relations
                 , Generics.Regular.Relations.BelongsTo
                 , Generics.Regular.Views
Other-Modules:   Generics.Regular.Extras
Build-Type:      Simple
Build-Depends:   base >= 4, 
                 mtl,
                 HDBC,
                 HDBC-sqlite3,
                 xhtml,
                 formlets >= 0.7,
                 applicative-extras,
                 regular >= 0.1.0.2
