Name:            generic-records
Version:         0.2
Synopsis:        Generic Records for model-driven development
Description:     TODO
Category:        Generics, Web, Database
License:         BSD3
License-file:    LICENSE
Copyright:       (c) Chris Eidhof
Author:          Chris Eidhof
Maintainer:      Chris Eidhof <ce+hackage@tupil.com>
Exposed-Modules:   Generics.Regular.Database
                   Generics.Regular.Database.Parse
                 , Generics.Regular.Database.Columns
                 , Generics.Regular.Database.Values
                 , Generics.Regular.Formlets
                 , Generics.Regular.ModelName
                 , Generics.Regular.Relations
                 , Generics.Regular.Relations.BelongsTo
                 , Generics.Regular.Relations.HasMany
                 , Generics.Regular.Views
                 , Generics.Regular.Happstack
                 , Generics.Regular.WebTypes
Other-Modules:   Generics.Regular.Extras
Build-Type:      Simple
Build-Depends:   base >= 4, 
                 mtl,
                 HDBC,
                 HDBC-sqlite3,
                 xhtml,
                 formlets == 0.6.1,
                 applicative-extras,
                 json >= 0.4,
                 fclabels >= 0.4,
                 happstack-server >= 0.3,
                 regular >= 0.1.0.2,
                 old-time >= 1.0,
                 pandoc >= 1.2
